# platypus3d

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
html/: index.html
res/: phong.frag  phong.material  phong.vert  simple.frag  simple.material  simple.vert  standard.frag  standard.material  standard.vert
src/: camera.cpp  camera.h  canvas.h  cube_mesh.cpp  cube_mesh.h  engine.cpp  engine.h  entity.cpp  entity.h  export.h  gl_indexed_vertex_buffer.cpp  gl_indexed_vertex_buffer.h  gl_material.cpp  gl_material.h  gl_render_device.cpp  gl_render_device.h  gl_render_factory.cpp  gl_render_factory.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_uniform_block.cpp  gl_uniform_block.h  gl_vertex_buffer.cpp  gl_vertex_buffer.h  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  mesh_entity.h  model.cpp  model.h  model_entity.cpp  model_entity.h  model_loader.cpp  model_loader.h  point_light.h  (+21 more)
